--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,18 @@
 [submodule "wlroots"]
 	path = wlroots
-	url = git@github.com:swaywm/wlroots.git
+	url = git@github.com:luispabon/wlroots.git
 [submodule "sway"]
 	path = sway
-	url = git@github.com:swaywm/sway.git
+	url = git@github.com:luispabon/sway.git
 [submodule "json-c"]
 	path = json-c
-	url = git@github.com:json-c/json-c.git
+	url = git@github.com:luispabon/json-c.git
 [submodule "swaylock"]
 	path = swaylock
-	url = git@github.com:swaywm/swaylock.git
+	url = git@github.com:luispabon/swaylock.git
 [submodule "swayidle"]
 	path = swayidle
 	url = git@github.com:luispabon/swayidle.git
+[submodule "swaybg"]
+	path = swaybg
+	url = git@github.com:luispabon/swaybg.git
