--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "grim"]
 	path = grim
 	url = git@github.com:luispabon/grim.git
+[submodule "wldash"]
+	path = wldash
+	url = git@github.com:kennylevinsen/wldash.git
