--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "wf-recorder"]
 	path = wf-recorder
 	url = git@github.com:ammen99/wf-recorder.git
+[submodule "rofi"]
+	path = rofi
+	url = https://github.com/lbonn/rofi
